# viel-ai

./: .dockerignore  .gitignore  Dockerfile  LICENSE-PLEDGE.md  PLEDGE.md  README.md  bot.py  bot_run.py  docker-compose.yml  index.html  index_old.html  main.py  pyproject.toml  requirements.txt  start.bat  start.sh  start_bot.bat  start_bot.sh
.github/workflows/: docker-publish.yml
api/: main_route.py
api/db/: database.py
api/models/: models.py  schemas.py
api/routers/: characters.py  config.py  discord.py  preset.py  servers.py
api/utils/: file_operations.py
configurations/: text-default.json
frontend/: app.js  index.css  index.html
frontend/components/: CharacterManager.js  ConfigManager.js  DiscordBotManager.js  ServerManager.js
interface/: characters.html  config.html  index.html  script.js  server-channels.html  styles.css
res/characters/: .gitignore  Vida-chan.json  Vida.json  Viel.json
src/controller/: config.py  discordo.py  filemanager.py  history.py  image_processor.py  messenger.py  observer.py  pipeline.py  plugin_registry.py
src/data/: card_data.py  config_data.py  const.py  dimension_data.py
src/models/: aicharacter.py  dimension.py  memory.py  prompts.py  queue.py  text_message.py
src/plugins/: base.py  battle.py  dice.py  image_gen.py  manager.py  researcher.py  search.py  summarizer.py  tarot.py  time.py
src/utils/: bot_thonk.py  docreader.py  duckduckgo.py  hidream.py  image_embed.py  image_eval.py  image_gen.py  image_uploader.py  llm.py  llm_new.py  (+6 more)
static/: ai-config.html  characters.html  index.html  servers.html
